Add CK BLOCK GEMM C++ Only

--- a/docker/Dockerfile.rocm
+++ b/docker/Dockerfile.rocm
@@ -69,5 +69,7 @@ ENV VLLM_FP8_WEIGHT_PADDING=1
 ENV VLLM_FP8_REDUCE_CONV=1
 ENV TORCHINDUCTOR_MAX_AUTOTUNE=1
 ENV TORCHINDUCTOR_MAX_AUTOTUNE_POINTWISE=1
+ENV ENABLE_MOE_ALIGN_BLOCK_SIZE_TRITON=1
+ENV CK_BLOCK_GEMM=1
 
 CMD ["/bin/bash"]
