--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 [submodule "sgl-kernel/3rdparty/turbomind"]
 	path = sgl-kernel/3rdparty/turbomind
 	url = https://github.com/InternLM/turbomind
+[submodule "sgl-kernel/3rdparty/composable_kernel"]
+	path = sgl-kernel/3rdparty/composable_kernel
+	url = https://github.com/ROCm/composable_kernel.git
+	branch = mtgu/dev/vllm_w8a8
